decouverte d'Angular, creation de plusieurs pages, meteo, home, login et config des routes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 
 <app-header></app-header>
-<h1 class="text-3xl  underline  text-blue-300 flex justify-center">
-  Hello Neyla!
-  <br><br>
-  Hello Neïla!
-</h1>
+
+
+
+
+<router-outlet></router-outlet>
+
+
+
+
+<app-footer></app-footer>
 
 
