creation d'une page admin et  tamagoshi

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 
 
 
-<h1 class="text-3xl  underline  text-blue-300 flex justify-center">
+<h1 class="text-3xl  underline flex justify-center">
   Bienvenue sur mon premier site avec Angular
 </h1>
 
@@ -17,7 +17,7 @@
           <img class="size-16 rounded-full" src="image/IMG_3755.jpg" alt="">
           <div>
             <h3 class="text-base/7 font-semibold tracking-tight text-gray-900">Abdelkkrim Bechir</h3>
-            <p class="text-sm/6 font-semibold text-indigo-600">Developpeur</p>
+            <p class="text-sm/6 font-semibold text-indigo-600">Developpeur 2025</p>
           </div>
         </div>
       </li>
