--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
         <div class="flex items-center justify-between">
           <label for="password" class="block text-sm/6 font-medium text-gray-900">Mot de passe</label>
           <div class="text-sm">
-            <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Mot de passe oublié?</a>
+            <a routerLink="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Mot de passe oublié?</a>
           </div>
         </div>
         <div class="mt-2">
@@ -46,7 +46,7 @@
 
     <p class="mt-10 text-center text-sm/6 text-gray-500">
       Pas encore inscrit?
-      <a href="/register" class="font-semibold text-indigo-600 hover:text-indigo-500">S'inscrire</a>
+      <a routerLink="/register" class="font-semibold text-indigo-600 hover:text-indigo-500">S'inscrire</a>
     </p>
   </div>
 </div>
