--- a/src/app/components/meteo/meteo.component.html
+++ b/src/app/components/meteo/meteo.component.html
@@ -1,14 +1,14 @@
-<div class="container mx-auto px-4 py-8 mt-16">
+<div class="container mx-auto px-4 py-8 mt-4">
   <!-- Titre -->
-  <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">
+  <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">
     La météo du {{currentDate}}
   </h2>
 
   <!-- Barre de recherche -->
-  <div class="max-w-md mx-auto mb-8">
+  <div class="max-w-md mx-auto mb-2">
     <div class="flex items-center bg-white rounded-lg shadow-md">
       <input
-        class="flex-1 p-4 rounded-l-lg focus:outline-none"
+        class="flex-1 p-2 rounded-l-lg focus:outline-none"
         placeholder="Entrez une ville..."
         [(ngModel)]="city"
         (keyup.enter)="searchWeather(city)"
@@ -28,9 +28,9 @@
   </div>
 
   <!-- Carte météo -->
-  <div class="max-w-2xl mx-auto" *ngIf="weatherData">
-    <div class="bg-white rounded-lg shadow-lg p-6">
-      <div class="text-center mb-6">
+  <div class="max-w-2xl mb-2 mx-auto" *ngIf="weatherData">
+    <div class="bg-white rounded-lg shadow-lg p-1">
+      <div class="text-center mb-2">
         <h3 class="text-2xl font-semibold text-gray-800">{{weatherData.name}}</h3>
         <div class="flex justify-center items-center gap-2">
           <img [src]="getWeatherIconUrl(weatherData.weather[0].icon)" [alt]="weatherData.weather[0].description" class="w-16 h-16">
@@ -38,9 +38,9 @@
         </div>
       </div>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
         <!-- Température -->
-        <div class="p-4 bg-blue-50 rounded-lg">
+        <div class="p-2 bg-blue-50 rounded-lg">
           <p class="text-lg font-medium text-gray-700">Température</p>
           <p class="text-3xl font-bold text-blue-600">
             {{weatherData.main.temp | number:'1.0-0'}}°C
